[gd_scene load_steps=10 format=2]

[ext_resource path="res://Combat/PlayerControl.gd" type="Script" id=1]
[ext_resource path="res://Assets/FreePixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Combat/PlayerControllerUI/ButtonAttack.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.439216, 0.478431, 0.686275, 1 )

[node name="PlayerControl" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -160.0
margin_right = 480.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.394531, 0.394531, 0.394531, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Panel" parent="."]
anchor_bottom = 1.0
margin_right = 220.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAttack" type="Button" parent="Options"]
margin_right = 220.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonUseItem" type="Button" parent="Options"]
margin_top = 40.0
margin_right = 220.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 3 )
text = "Use Item"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonUseSkill" type="Button" parent="Options"]
margin_top = 80.0
margin_right = 220.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 3 )
text = "Use Skills"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonEndTurn" type="Button" parent="Options"]
margin_top = 120.0
margin_right = 220.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 3 )
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PlayerStatus" type="Panel" parent="."]
margin_left = 220.0
margin_right = 470.0
margin_bottom = 160.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerStatus"]
margin_left = 12.0
margin_top = 12.0
margin_right = 55.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 4 )
text = "Status:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="energy" type="Label" parent="PlayerStatus"]
margin_left = 12.0
margin_top = 42.0
margin_right = 82.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 6 )
text = "Energy: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackOptions" type="Panel" parent="."]
visible = false
anchor_bottom = 1.0
margin_left = 220.0
margin_right = 470.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_left" parent="AttackOptions" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -14.0
margin_right = -15.0
margin_bottom = 14.0

[node name="btn_right" parent="AttackOptions" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -14.0
margin_right = 95.0
margin_bottom = 14.0
text = "Right"
target = "RIGHT"

[node name="btn_top" parent="AttackOptions" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -58.0
margin_right = 40.0
margin_bottom = -30.0
text = "Top"
target = "TOP"

[node name="btn_bottom" parent="AttackOptions" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 30.0
margin_right = 40.0
margin_bottom = 58.0
text = "Bottom"
target = "BOTTOM"

[node name="SkillsOptions" type="Panel" parent="."]
margin_left = 220.0
margin_right = 479.0
margin_bottom = 160.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skiil_1" parent="SkillsOptions" instance=ExtResource( 3 )]
anchor_left = 0.0637066
anchor_top = 0.075
anchor_right = 0.372587
anchor_bottom = 0.25
margin_right = 0.0
margin_bottom = 0.0
text = "ALL"
target = "ALL"

[node name="Skiil_2" parent="SkillsOptions" instance=ExtResource( 3 )]
anchor_left = 0.0637066
anchor_top = 0.325
anchor_right = 0.372587
anchor_bottom = 0.5
margin_right = 0.0
margin_bottom = 0.0
text = "ALL"
target = "ALL"

[connection signal="pressed" from="Options/ButtonAttack" to="." method="_on_button_show_attack_pressed"]
[connection signal="pressed" from="Options/ButtonUseSkill" to="." method="_on_ButtonUseSkill_pressed"]
[connection signal="pressed" from="Options/ButtonEndTurn" to="." method="_on_ButtonEndTurn_pressed"]
[connection signal="button_attack_pressed" from="AttackOptions/btn_left" to="." method="_on_Button_attack_pressed"]
[connection signal="button_attack_pressed" from="AttackOptions/btn_right" to="." method="_on_Button_attack_pressed"]
[connection signal="button_attack_pressed" from="AttackOptions/btn_top" to="." method="_on_Button_attack_pressed"]
[connection signal="button_attack_pressed" from="AttackOptions/btn_bottom" to="." method="_on_Button_attack_pressed"]
[connection signal="button_attack_pressed" from="SkillsOptions/Skiil_1" to="." method="_on_Button_useSkill_pressed"]
[connection signal="button_attack_pressed" from="SkillsOptions/Skiil_2" to="." method="_on_Button_useSkill_pressed"]
